--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,8 @@
 .font-black{
     color: #000000;
 }
+@media only screen and (max-width: 600px) {
+    #map{
+        width: fit-content;
+    }
+}
